# libmic-rs

./: Cargo.toml  README.md
examples/: record.rs
src/: error.rs  lib.rs  mic.rs
